<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/tlogo"
            app:srcCompat="@drawable/person" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tName"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:id="@+id/Name"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/tEditName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            tools:ignore="RtlHardcoded" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tPhone"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/tEditPhone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            tools:ignore="RtlHardcoded" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tAddress"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/address"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/tEditAddress"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            tools:ignore="RtlHardcoded" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/SubmitBtn"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:backgroundTint="@color/Navy"
            android:text="@string/tSubmit"
            android:textSize="20sp"
            android:textStyle="bold"
            android:radius="50dp"/>
    </TableRow>

</TableLayout>